--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,11 @@ body
   background-color: #000000  ;
   color: #fff;
 }
+.dd
+{
+  text-align: center;
+
+}
 .intro
 {
   margin-top: 120px;
@@ -158,6 +163,7 @@ display: block;
 }
 .vids
 {
+
   position: relative;
   left: 30px;
   width: 400px;
